[package]
name = "velect"
authors = ["CerulanLumina <CerulanLumina@users.noreply.github.com>"]
description = "A Vec with item / index selection"
license = "MPL-2.0"
keywords = ["vec", "select", "index"]
categories = ["data-structures"]
repository = "https://github.com/CerulanLumina/velect"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.12.0"
